# Nona

./: .env.example  .gitignore  .ra-project.yaml  ACUTE-FLOW-PLAN.md  CLAUDE.md  IDEAS.md  LAUNCH-AUDIT.md  PILOT-PLAYBOOK.md  README.md  STRATEGY-AUDIT.md  designer-brief.md  docker-compose.yml  landing-copy.md  package.json  plan-maestro.yaml  pnpm-lock.yaml  turbo.json  vision-mvp.md
.claude/: settings.json
.claude/hooks/: research_postprocess.py
.codex/: config.toml
.hyperresearch/: config.toml
Nona-Design/: Nona.html
apps/bot/: .dockerignore  .env.example  Dockerfile  fly.toml  main.py  pyproject.toml  storage.py  transcribe.py
apps/bot/agent/: __init__.py  brain.py  broadcast.py  case_agent.py  email.py  harness.py  kb.py  names.py  pi_tools.py  places.py  prompts.py  runner.py  seed_kb.py  tools.py
apps/bot/channels/: telegram.py
apps/bot/data/: pilot_contacts.csv
apps/bot/intel/: agent.py  knowledge.py  models.py  server.py  tools.py
apps/bot/jobs/: __init__.py  matching.py
apps/bot/mcp/: __init__.py  server.py
apps/bot/scripts/: index_research.py  load_contacts.py  monitor.py  monitor_fb.py  simulate_batch.py
apps/bot/scripts/fixtures/: fb_posts.example.json
apps/bot/tests/: test_sequencer_parity.py
apps/ml/: .dockerignore  Dockerfile  fly.toml  main.py  pyproject.toml
apps/ml/clients/: supabase.py
apps/ml/models/: __init__.py
apps/ml/pipeline/: blur.py  detect.py  embed.py  quality.py  segment.py
apps/ml/scripts/: export_training_data.py  seed_test_cases.py  test_model.py  test_same_individual.py
apps/ml/tests/: test_pipeline.py
research/: .obsidianignore  BUSINESS-MODEL.md  SIAC-feasibility.md  brief_01_behavioral_engine.md  brief_02_movement_physical.md  brief_04_search_prioritization.md  brief_06_collective_learning.md  brief_red_cao_algarve.md  ideas.md  identificacion-perros-ml.md  perros-algarve.md
scripts/: deploy.sh
supabase/: config.toml
(+761 files in other folders)
