[project]
name = "salvacao-bot"
version = "0.1.0"
description = "SalvaCão Telegram bot with Claude agentic intake"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "anthropic>=0.40",
    "openai>=1.57",
    "supabase>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "fastmcp>=3.3.1",
    "resend>=2.30.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=2.1.0",
]
