[project]
name = "salvacao-ml"
version = "0.1.0"
description = "SalvaCão ML service — dog detection, embedding, visual matching"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "ultralytics>=8.3",
  "transformers>=4.46",
  "torch>=2.4",
  "torchvision>=0.19",
  "Pillow>=10",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "httpx>=0.27",
  "supabase>=2.9",
  "python-dotenv>=1.0",
  "pydantic>=2.9",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.uv]
package = false
